70-python-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-todo-api
  namespace: yatest
  labels:
    app: python-todo-api
spec:
  replicas: 1 # Start with 1, can scale later
  selector:
    matchLabels:
      app: python-todo-api
  template:
    metadata:
      labels:
        app: python-todo-api
    spec:
      containers:
        - name: python-todo-api
          image: git.systementor.se/zayn/python-todo-api:0.11
          ports:
            - containerPort: 5000 # Assuming Flask runs on port 5000
      imagePullSecrets:
        - name: gitsystementorregcred
