80-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-todo-app
  namespace: yatest
  labels:
    app: frontend-todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-todo-app
  template:
    metadata:
      labels:
        app: frontend-todo-app
    spec:
      containers:
        - name: frontend-todo-app
          image: git.systementor.se/zayn/frontend-todo-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitsystementorregcred
