10-site.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: staticwebserver-service
  labels:
    app: staticwebserver
spec:
  type: LoadBalancer # LoadBalancer skapar en extern IP-adress som kan nås från internet
  ports:
  - name: http
    port: 80 # 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: staticwebserver
  sessionAffinity: None
