54-pythonapi.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: pythonapi0506-service
  labels:
    app: pythonapi
spec:
  type: ClusterIP # LoadBalancer skapar en extern IP-adress som kan nås från internet
  ports:
  - name: http
    port: 80 # 443
    protocol: TCP
    targetPort: 5000
  selector:
    app: pythonapi
  sessionAffinity: None
