65-loginsite.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: loginsite-service
  labels:
    app: loginsite
spec:
  type: ClusterIP 
  ports:
  - name: http
    port: 80 # 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: loginsite
  sessionAffinity: None
