81-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-todo-app-service
  namespace: yatest
  labels:
    app: frontend-todo-app
spec:
  selector:
    app: frontend-todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP # Exposes the service on a cluster-internal IP
