401-keelingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: keel
  name: sites
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "keelstefan0429.ignorelist.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keel
                port:
                  number: 9300
