55-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: yatest
  name: sites
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "stefanstest0415.ignorelist.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: staticwebserver-service
                port:
                  number: 80
    - host: stefansgobeerapi.mooo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gobeerapi-service
                port:
                  number: 80
    - host: yagolangsite0422.mooo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loginsite-service
                port:
                  number: 80
